<resources>
    <string name="app_name">Event Hub</string>
    <string name="txt1">Event Hub</string>
    <string name="txt2">Enjoy Your Life !!</string>
    <string name="txt3">Login</string>
    <string name="txt4">Username : </string>
    <string name="txt5">Password : </string>
    <string name="txt6">Email : </string>
    <string name="txt7">Register</string>
    <string name="txt8">Customer Login</string>
    <string name="txt9">Admin Login</string>
    <string name="txt10">Event ID :</string>
    <string name="txt11">Event Name :</string>
    <string name="txt12">Category :</string>
    <string name="txt13">Date :</string>
    <string name="txt14">Time :</string>
    <string name="txt15">Venue :</string>
    <string name="txt16">Update Details</string>
    <string name="txt17">Want to enjoy your life ?</string>
    <string name="hint1">eg: E001</string>
    <string name="hint2">Music, Sports etc</string>
    <string name="hint3">eg: 08:00 - 17:00</string>
    <string name="btn1">Connect with Us</string>
    <string name="btn2">Add</string>
    <string name="btn3">Select</string>
    <string name="btn4">Add Events</string>
    <string name="btn5">Event List</string>
    <string name="btn6">Edit</string>
    <string name="btn7">Update</string>
    <string name="btn8">Logout</string>
    <string name="btn9">Search</string>
    <string name="ex1">Event 1</string>
    <string name="ex2">Event 2</string>
    <string name="ex3">Event 3</string>
    <string name="ex4">Event 4</string>
    <string name="ex5">User List</string>
    <string name="ex6">Contact Number : </string>
    <string name="ex7">Event 5</string>
    <string name="ex8">Event 5</string>
    <string name="ex9">Event 5</string>
    <string name="ex10">Event 5</string>
    <string name="title_activity_add_event2">AddEvent2</string>


    <!--dumi-->
    <!--<string name="app_name">OrderTickets</string>-->
    <string name="text01">PICK YOUR PACKAGE</string>
    <string name="text02">PLATINUM</string>
    <string name="text03">GOLD</string>
    <string name="text04">SILVER</string>
    <string name="text05">BRONZE</string>
    <string name="text06">LKR 3000</string>
    <string name="text07">LKR 2000</string>
    <string name="text08">LKR 1000</string>
    <string name="text09">LKR 500</string>
    <string name="text10">Cancle</string>
    <string name="text11">PLATINUM</string>
    <string name="text12">Grab Your Choice</string>
    <string name="text13">(select only two items from each)</string>
    <string name="text14">FOODS</string>
    <string name="radio01">Drumsticks</string>
    <string name="radio02">Sandwich</string>
    <string name="radio03">Butter Cake</string>
    <string name="radio04">Tea Bun</string>
    <string name="text015">BEVERAGES</string>
    <string name="radio05">Mojitho</string>
    <string name="radio07">Cocktail</string>
    <string name="radio06">Soft Drink</string>
    <string name="radio08">Water Bottle</string>
    <string name="text16">Next</string>
    <string name="text17">GOLD</string>
    <string name="radio09">Drumstick</string>
    <string name="radio10">Sandwich</string>
    <string name="radio11">Butter Cake</string>
    <string name="radio12">Tea Bun</string>
    <string name="radio13">Mojitho</string>
    <string name="radio14">Cocktail</string>
    <string name="radio15">Soft Drink</string>
    <string name="radio16">Water Bottle</string>
    <string name="text18">Next</string>
    <string name="text19">(select only one item from each)</string>
    <string name="text20">TICKETS</string>
    <string name="text21">Quantity</string>
    <string name="text22">Your Seat Position:</string>
    <string name="text23">Front Rows</string>
    <string name="text24">Book</string>
    <string name="text25">Back Rows</string>
    <string name="text26">Balcony</string>
    <string name="text27">Your Booking Details</string>
    <string name="text28">BnS Live In Concert</string>
    <string name="text29">Aug 20,2019</string>
    <string name="text30">6pm onwards</string>
    <string name="text31">Eagles Banquet Hall</string>
    <string name="text32">Package  =</string>
    <string name="text33">Platinum</string>
    <string name="text34">4</string>
    <string name="text35">Seat Position  =</string>
    <string name="text36">Front</string>
    <string name="text37">Foods and Beverages</string>
    <string name="text38">Sandwich</string>
    <string name="text39">Tea Bun</string>
    <string name="text40">Soft Drink</string>
    <string name="text41">Water Bottle</string>
    <string name="text42">You can update your package within 3 days(*conditions apply*)</string>
    <string name="text43">Total Cost LKR  =</string>
    <string name="text44">12000</string>
    <string name="text45">Delete Booking</string>
    <string name="text46">Pay</string>
    <string name="text48">Ticket Quantity :</string>
    <string name="text47">Update</string>
    <string name="text49">QRCode for Booking</string>
    <string name="text50">Ref No :</string>
    <string name="text51">001A2589BnS</string>
    <string name="text52">Pay Online</string>
    <string name="text53">You can pay on Event day or pay online now</string>
    <string name="text54">Pay on Event day</string>
    <string name="text55">QRCode</string>

    <string name="textView1">Search For.....</string>
    <string name="button">Type</string>
    <string name="button2">Location</string>
    <string name="button3">Date and Time</string>
    <string name="button5">Done</string>
    <string name="textView5">Select the Type of Your Event</string>
    <string name="textView">Select Your Date and Time</string>
    <string name="button4">Done</string>
    <string name="button12">Done</string>
    <string name="button6">Music</string>
    <string name="button8">Business</string>
    <string name="button7">Sports</string>
    <string name="button9">Fashion</string>
    <string name="button10">Science</string>
    <string name="button11">Festival</string>
    <string name="button14">Type</string>
    <string name="button15">Location</string>
    <string name="button16">Date and Time</string>
    <string name="button19">Add to Wishlist</string>
    <string name="textView7">Event List</string>
    <string name="textView8">Your Wishlist</string>
    <string name="button18">Proceed</string>
    <string name="button20">Delete</string>
    <string name="textView6">Select Your Location</string>
    <string name="button13">Done</string>
    <string name="radioButton">Colombo</string>
    <string name="radioButton2">Gampaha</string>
    <string name="radioButton3">Galle</string>
    <string name="radioButton4">Kandy</string>
    <string name="editText2">Select a Type</string>
    <string name="editText3">Select a Location</string>
    <string name="editText4">Select a Date</string>
    <string name="textView2">ex1</string>
    <string name="textView3">ex2</string>
    <string name="textView4">ex3</string>
    <string name="textView9">ex4</string>
    <string name="textView10">ex1</string>
    <string name="textView11">ex2</string>
    <string name="textView12">ex3</string>


    <string name="txtpay">PAYMENT</string>
    <string name="txt00001">Fill the following details for the online Payment</string>
    <string name="textcardtype">Card Type</string>
    <string name="radiocard01">VISA</string>
    <string name="radiocard02">MASTER</string>
    <string name="textpayname">Name</string>
    <string name="textcardnum">Card Number</string>
    <string name="textpayexpire">Expire Date</string>
    <string name="txtpaycvv">CVV</string>
    <string name="textentername"></string>
    <string name="butnpay">PAY</string>
    <string name="txtsubmit">SUBMIT</string>
    <string name="textupdate">Update Payment</string>
    <string name="textup02"> Update details here or search for existing card</string>
    <string name="txtsvaechangs">Save Changes</string>
    <string name="textpayconfirm">Payment Confirmation</string>
    <string name="textbnspay">BnS Live In Concert</string>
    <string name="txtpaydate">Aug 20,2019</string>
    <string name="txtpaytime">6pm onwards</string>
    <string name="textpayplace">Eagles Banquet Hall</string>
    <string name="textvisacode">Payment Method : </string>
    <string name="txtcardnum">VISA  ************1049</string>
    <string name="texttotalcost">Total Cost LKR  =</string>
    <string name="textplaceorder">Place Order</string>
    <string name="txtedittext">Edit Card Details</string>
    <string name="textrefnum">Ref Num :</string>
    <string name="txtref">0011A2589BnS</string>
    <string name="txtsucsess">Payment Successfull</string>
    <string name="txtdone">DONE</string>
    <string name="txtpaylogout">LOG OUT</string>
    <string name="textexit">EXIT</string>
    <string name="textalready">Do You Already Have an Account...?</string>
    <string name="Evnt">Event :</string>
    <string name="pkg">Package :</string>
    <string name="cusid">Customer ID :</string>
    <string name="txtPid">Package ID :</string>
    <string name="packageadd">Add</string>
    <string name="hintpack">eg : P001</string>
    <string name="addpack">Add</string>
    <string name="txtPName">Package Name :</string>
    <string name="txtTPrice">Ticket Price :</string>
    <string name="txtOf">Offers :</string>
    <string name="edt">Edit Your Details</string>
    <string name="paynw">Pay Now</string>
    <string name="btnPsearch">SEARCH</string>
    <string name="btnPdelete">DELETE</string>
    <string name="btnPupdate">UPDATE</string>
    <string name="evnhandle">Event Handling</string>
    <string name="pkghndl">Package Handling</string>
    <string name="usrhndl">User Handling</string>
    <string name="conbookings">Confirmed Bookings</string>
    <string name="addevents">ADD EVENTS</string>
    <string name="eventlist">EVENT LIST</string>
    <string name="addpkg">ADD PACKAGE</string>
    <string name="pkglist">PACKAGE LIST</string>
    <string name="slctedevn">Selected Event :</string>
    <string name="selctedpkg">Selected Package :</string>
    <string name="next">Next</string>
    <string name="addpkg02">Add a Package</string>
    <string name="pkgg">Package :</string>
    <string name="adddetails">Add Details</string>
    <string name="getstarted">Get Started</string>

</resources>
