<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/stdPhoto"
            android:layout_width="70dp"
            android:layout_height="75dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="20dp"
        android:layout_height="75dp"
        android:orientation="vertical">


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt10"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt11"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt12"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt15"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt14"
            android:textStyle="bold" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/custvevID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="-" />

        <TextView
            android:id="@+id/custvevName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="-" />

        <TextView
            android:id="@+id/custvcategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="-" />

        <TextView
            android:id="@+id/custvvenue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="-" />

        <TextView
            android:id="@+id/custvtime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="-" />


    </LinearLayout>


</LinearLayout>
