<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="20dp"
        android:layout_height="75dp"
        android:orientation="vertical">


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt4"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt6"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ex6"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt5"
            android:textStyle="bold" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvevID12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="-" />

        <TextView
            android:id="@+id/tvevName12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="-" />

        <TextView
            android:id="@+id/tvcno12"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:text="-" />

        <TextView
            android:id="@+id/tvpwd12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="-" />


    </LinearLayout>


</LinearLayout>
